--- a/hungry-helper/src/Components/Header/Header.css
+++ b/hungry-helper/src/Components/Header/Header.css
@@ -1,19 +1,39 @@
 .header {
-    margin: 0 auto;
     padding: 12px;
     background-color: antiquewhite;
     background-image: url('/src/images/wood-plank.jpg');
     background-size: cover;
+    height: 231px;
 }
 
 .title {
     text-align: justify;
     text-shadow: -2px 3px black;
     width: 60px;
-    font-size: 48px;
+    font-size: 53px;
     font-weight: 800;
     color: white;
 }
+nav {
+    background-color: rgba(0, 0, 0, .6);
+}
+
+.nav-ul {
+    margin: 0 auto;
+    padding: 10px;
+    color: white;
+    display: flex;
+    justify-content: space-around;
+}
+
+li {
+    list-style: none;
+    font-weight: bold;
+    font-size: 16px;
+}
+
 body {
     background-color: blanchedalmond;
+    margin: 0 auto;
+
 }
