--- a/hungry-helper/src/Components/Header/Header.css
+++ b/hungry-helper/src/Components/Header/Header.css
@@ -14,6 +14,7 @@
     font-weight: 800;
     color: white;
 }
+
 nav {
     background-color: rgba(0, 0, 0, .6);
 }
@@ -21,15 +22,16 @@ nav {
 .nav-ul {
     margin: 0 auto;
     padding: 10px;
-    color: white;
     display: flex;
     justify-content: space-around;
 }
 
-li {
+header li {
+    color: white;
     list-style: none;
     font-weight: bold;
     font-size: 16px;
+    text-decoration: none;
 }
 
 body {
