--- a/src/Components/Recipe/Recipe.css
+++ b/src/Components/Recipe/Recipe.css
@@ -1,54 +1,58 @@
+.container {
+	display: flex;
+	justify-content: center;
+}
+
 .recipe-div {
-    margin: 0 auto;
-    text-align: center;
-    max-width: 360px;
-    margin: 30px;
+	margin: 0 auto;
+	text-align: center;
+	max-width: 360px;
+	margin: 30px;
 }
 
 .recipe-header {
-    border-bottom: 2px solid black;
+	border-bottom: 2px solid black;
 }
 
 .image-div {
-    margin: 20px 0px 20px 0px;
-    padding: 10px;
+	margin: 20px 0px 20px 0px;
+	padding: 10px;
 }
 
 #recipe-image {
-    width: 300px;
-    height: 300px;
-    border: 4px solid black;
-    border-radius: 10px;
+	width: 300px;
+	height: 300px;
+	border: 4px solid black;
+	border-radius: 10px;
 }
 
 .description-div {
-    border-top: 2px solid black;
-    margin-bottom: 10px;
+	border-top: 2px solid black;
+	margin-bottom: 10px;
 }
 
-
 .ingredients-div {
-    border-top: 2px solid black;
-    text-align: left;
+	border-top: 2px solid black;
+	text-align: left;
 }
 
 .ingredients-title {
-    text-align: center;
+	text-align: center;
 }
 
 li {
-    padding: 5px;
-    list-style-type: none;
+	padding: 5px;
+	list-style-type: none;
 }
 
 .instructions-div {
-    border-top: 2px solid black;
+	border-top: 2px solid black;
 }
 
 .information-div {
-    border-top: 2px solid black;
+	border-top: 2px solid black;
 }
 
-.source-p {
-    max-width: 170px;
+a {
+    text-decoration: none;
 }
