--- a/src/Components/RecipeInfo/RecipeInfo.css
+++ b/src/Components/RecipeInfo/RecipeInfo.css
@@ -1,3 +1,8 @@
+.container {
+    display: flex;
+    justify-content: center;
+}
+
 .recipe-info-div {
     margin: 0 auto;
     text-align: center;
